--- a/style/index.css
+++ b/style/index.css
@@ -36,9 +36,23 @@ button {
 #fourth_modal_random_2,
 #fourth_modal_relationsip_accept,
 #fourth_modal_relationship_decline,
+#fifth_modal_harry_potter,
+#sixth_modal_secrets,
+#seventh_modal_secrets,
+#accept_1,
+#accept_2,
+#accept_3,
+#accept_4,
+#accept_5,
 #ad_1,
 #ad_2,
 #ad_3,
+#ad_4,
+#ad_5,
+#ad_6,
+#ad_7,
+#b_1,#b_2,#b_3,
+#ad_8_wrapper,
 #facebook_img,
 #inst_img {
   display: none;
@@ -192,7 +206,85 @@ button {
   background: white;
   box-shadow: 8px 8px 0 rgba(0, 0, 0, 0.2);
 }
-
+.fifth_modal_harry_potter{
+    position: absolute;
+  left: 50%;
+  top: 10%;
+  transform: translate(-50%, -50%);
+  width: auto;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1.3rem 3rem;
+  border: 3px solid black;
+  border-radius: 5px;
+  background: white;
+  box-shadow: 8px 8px 0 rgba(0, 0, 0, 0.2);
+}
+.sixth_modal_secrets{
+    position: absolute;
+  left: 50%;
+  top: 10%;
+  transform: translate(-50%, -50%);
+  width: auto;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1.3rem 3rem;
+  border: 3px solid black;
+  border-radius: 5px;
+  background: white;
+  box-shadow: 8px 8px 0 rgba(0, 0, 0, 0.2);
+}
+.seventh_modal_secrets{
+    position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: auto;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1.3rem 3rem;
+  border: 3px solid black;
+  border-radius: 5px;
+  background: white;
+  box-shadow: 8px 8px 0 rgba(0, 0, 0, 0.2);
+}
+/*accepts*/
+.accept_1, .accept_2, .accept_3, .accept_4, .accept_5{
+    position: absolute;
+  transform: translate(-50%, -50%);
+  width: auto;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1.3rem 3rem;
+  border: 3px solid black;
+  border-radius: 5px;
+  background: white;
+  box-shadow: 8px 8px 0 rgba(0, 0, 0, 0.2);
+}
+.accept_1{
+    top: 30%;
+    left: 80%
+}
+.accept_2{
+    bottom: 0px;
+    right: 0px;
+}
+.accept_3{
+    bottom: 10%;
+    left: 50%
+}
+.accept_4{
+    bottom: 40%;
+    left: 30%
+}
+.accept_5{
+    top: 10%;
+    left: 50%
+}
 /*ads style*/
 .ad_1_wrapper{
     position: absolute;
@@ -224,7 +316,58 @@ button {
     height: 60%;
   width: 70%;
 }
-
+.ad_4_wrapper{
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+}
+.ad_4{
+    height: 70%;
+    width: 80%;
+}
+.ad_5_wrapper{
+    position: absolute;
+    bottom: 0%;
+}
+.ad_5{
+    height: 70%;
+    width: 80%;
+}
+.ad_6_wrapper{
+    position: absolute;
+    top: 30%;
+    left: 15%;
+}
+.ad_6{
+ height: 70%;
+    width: 80%;
+}
+.ad_7_wrapper{
+    position: absolute;
+    top: 15%;
+    left: 25%;
+}
+.ad_7{
+    height: 80%;
+    width: 70%;
+}
+.ad_8_wrapper{
+    max-width: 100%;
+    max-height: 100%;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    overflow: auto;
+    position: absolute;
+    right: 0;
+    top: 0;
+    -o-object-fit: contain;
+    object-fit: contain;
+}
+.ad_8{
+   width: 100%;
+   height: 100%;
+}
 .facebook_img_wrapper{
     position: absolute;
     left: 20%;
@@ -255,3 +398,26 @@ button {
 .hello:hover {
     background-color: yellow;
   }
+
+  .b_1,.b_2,.b_3{
+    position: absolute;
+    background-color: #f44336;
+    font-size: 55px;
+    border: 2px solid black;
+    width: 25%;
+    padding: 32px 16px;
+  }
+  .b_1{
+      top: 10%;
+      left: 15%;
+  }
+  .b_2{
+    top: 40%;
+    left: 35%;
+  }
+
+  .b_3{
+      bottom: 10%;
+      right: 15%;
+  }
+
